Change field 111 checking condition. Add error if text block is not found. Add boolean parameter constructor to ValidationResult Update comments